--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@ngrx/store": "^8.6.0",
+    "bootstrap": "3.3.7",
     "core-js": "^3.1.2",
     "rxjs": "^6.0.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "bootstrap": "3.3.7"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.23",
